# Scrapper

./: .env.example  .gitignore  Pipfile  bun.lockb  eslint.config.js  go.mod  go.sum  index.html  main.py  mypy.ini  package.json  pyproject.toml  tsconfig.app.json  tsconfig.json  vite.config.ts
.fleet/: run.json  settings.json
cmd/: main.go
cmd/loader/: db.go  scrap.go  web.go
front/: main.tsx  package-lock.json  package.json  router.tsx
front/app/: Layout.tsx  main.tsx  router.tsx
front/components/: ScrapDetail.tsx  ScrapForm.tsx  ScrapList.tsx
front/hooks/: useScrap.tsx
front/pages/: NotFound.tsx  index.ts
front/services/: scrapService.ts
front/shared/: api.ts  config.ts  constant.ts
front/types/: Scrap.ts  index.ts
front/widgets/: PageNation.tsx  PageTitle.tsx  ScrapDetail.tsx  ScrapForm.tsx  ScrapList.tsx
internal/app/: config.go  constant.go  db.go  routes.go
internal/appError/: error.go
internal/controller/: exporter.go  iController.go  image.go  scrap.go
internal/dto/: exporter.go  image.go  scrap.go
internal/entity/: exporter.go  image.go  scraps.go  tagEntity.go
internal/model/: exporter.go  image.go  scrap.go  tag.go
internal/repository/: exporer.go  exporter.go  image.go  scrap.go
internal/routes/: routes.go
internal/scrapper/: factory.go  implHoyolab.go  implInsta.go  implTwitter.go  scrapper.go
internal/service/: scrap.go
internal/util/: config.go  constant.go  db.go  saveImg.go
server/: database.py  main.py  scrapController.py  scrapRouter.py
src/: database.py  scrapController.py  scrapRouter.py
(+85 files in other folders)
