[tool.poetry]
name = "twitterdownloader"
version = "0.1.0"
description = ""
authors = ["Insiro <leeon@insiro.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pillow = "^10.4.0"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
SQLAlchemy = "^2.0.35"
python-dotenv = "^1.0.1"
playwright = "^1.47.0"
uvicorn = "^0.31.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240914"
mypy = "^1.11.2"
types-beautifulsoup4 = "^4.12.0.20240907"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
